--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Connecting to Cloud Clever mysql database
-DATABASE=your-database
-DATABASE_HOST=your-database_host
-DATABASE_USER=your-database_user
-DATABASE_PASSWORD=your-database_password
-DATABASE_PORT =your-database_port
+# DATABASE=your-# database
+# DATABASE_HOST=your-# database_host
+# DATABASE_USER=your-# database_user
+# DATABASE_PASSWORD=your-# database_password
+# DATABASE_PORT =your-# database_port
 
 # XAMPP DATABASE CONNECTION
-# DATABASE =your-# database
-# DATABASE_HOST =your-# database_host
-# DATABASE_USER =your-# database_user
-# DATABASE_PASSWORD =your-# database_password
-#PORT =your-#port
+DATABASE =your-database
+DATABASE_HOST =your-database_host
+DATABASE_USER =your-database_user
+DATABASE_PASSWORD =your-database_password
+PORT =your-port
 
 # Admin username in the database
 ADMIN_USERNAME =your-admin_username
